istio/circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: coffee-service
spec:
  host: coffee-service
  trafficPolicy:
    connectionPool:
      http: {}
      tcp: {}
    loadBalancer:
      simple: RANDOM
    outlierDetection:
      consecutiveErrors: 3
      interval: 10s
      baseEjectionTime: 1m
      maxEjectionPercent: 100
