istio/request-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-default
spec:
  hosts:
    - "*"
  gateways:
    - coffee-gateway
  http:
    - match:
        - uri:
            prefix: /coffee
      route:
        - destination:
            host: coffee-service
            port:
              number: 8080
      retries:
        attempts: 3
        perTryTimeout: 2s
