istio/request-routing-all-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-default
spec:
  hosts:
    - "*.istiodemo.xyz"
  gateways:
    - coffee-gateway
  http:
    - match:
        - uri:
            prefix: /coffee
      route:
        - destination:
            host: coffee-service
            subset: v2
            port:
              number: 8080
