istio/request-routing-chrome-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coffee-default
spec:
  hosts:
    - "*"
  gateways:
    - coffee-gateway
  http:
    - match:
        - uri:
            prefix: /coffee
          headers:
            user-agent:
              regex: ".*Chrome.*"
      route:
        - destination:
            host: coffee-service
            subset: v2
            port:
              number: 8080
    - match:
        - uri:
            prefix: /coffee
      route:
        - destination:
            host: coffee-service
            subset: v1
            port:
              number: 8080
